[lworld] C1 asserts basic_type() <= T_ARRAY in ShortLoopOptimizer

XMLWordPrintable

      This version of ShortLoopOptimizer can handle only up to T_ARRAY (13), but in Valhalla we have added T_VALUETYPE (14)

      http://hg.openjdk.java.net/valhalla/valhalla/file/cf9a8e7a0094/src/hotspot/share/c1/c1_ValueMap.cpp#l279

      This cause the following test to assert when running with -XX:+EnableValhallaC1

      http://hg.openjdk.java.net/valhalla/valhalla/file/cf9a8e7a0094/test/hotspot/jtreg/runtime/valhalla/valuetypes/ValueTypesTest.java

      # Internal Error (/home/iklam/jdk/valhalla/open/src/hotspot/share/c1/c1_ValueMap.cpp:279), pid=8577, tid=8591
      # assert(field->type()->basic_type() >= 0 && field->type()->basic_type() <= T_ARRAY) failed: Invalid type

      The fix is to replace all use of T_ARRAY in this class to T_VALUETYPE.

            Assignee:
            Ioi Lam
            Reporter:
            Ioi Lam
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: