8220330: [lworld] C1 asserts basic_type() <= T_ARRAY in ShortLoopOptimizer